@@ -97,6 +97,12 @@ Details about changes to older releases may be found in the file ChangeLog.txt.<
 <table>
 <tbody valign=top align=left>
 <tr>
+<td align=center width=100><a href="nojs.html" onclick="FR(3022827);return false;">3022827</a></td>
+<td>Implement 'stealth' mode where, as long as the user specifies both
+the use of the System Tray and a valid Hot Key, then the System Tray
+icon and the button on the Taskbar can be hidden.</td>
+</tr>
+<tr>
 <td align=center width=100><a href="nojs.html" onclick="FR(3017535);return false;">3017535</a></td>
 <td>Allow user to edit the generated passwords (Manage&rarr;Generate
 Password) before copying to the clipboard.</td>
