@@ -122,6 +122,7 @@ const PWSprefs::boolPref PWSprefs::m_bool_prefs[NumBoolPrefs] = {
   {_T("NotesWordWrap"), false, ptApplication},              // application
   {_T("LockDBOnIdleTimeout"), true, ptDatabase},            // database
   {_T("HighlightChanges"), true, ptApplication},            // application
+  {_T("HideSystemTray"), false, ptApplication},             // application
 };
 
 // Default value = -1 means set at runtime
